# python_ml_nlp_practice

./: pyproject.toml  requirements.txt
resources/: Iris.csv  Salary.csv  example.txt  large_file.txt  uncleaned_data.csv
src/1-Basic Python/: basics.ipynb  filehandling.ipynb  test.py
src/10-Machine Learning/: db_scan_clustering.ipynb  decision_tree_classifier.ipynb  decison_tree_regressor.ipynb  eda_feature_engg.ipynb  hierarichal_clustering.ipynb  k_means_cluster.ipynb  logistic_regression.ipynb  multiple_linear_reg_california_dataset.ipynb  multiple_liner_regression.ipynb  polynomial_regression.ipynb  principle_component_analysis(pca).ipynb  ridge.pkl  ridge_lasso_elasticnet.ipynb  scaler.pkl  simple_linear_regression.ipynb  support_vector_classification.ipynb  support_vector_regression.ipynb
src/11-NLP/: bag_of_words.ipynb  kindle_review_sentiment_analyis.ipynb  spam_ham_classification_nltk.ipynb  spam_ham_classification_word2vec.ipynb  text_preprocessing_1.ipynb  tf-idf.ipynb  word2vec_gensim.ipynb
src/2-Advance Python/: Iterator_Closures.ipynb  functions.ipynb
src/3-Data Analysis/: data_analysis.ipynb  df_pickle  matplotlib.ipynb  reading_data.ipynb  seaborn.ipynb
src/4-Logging and SQL/: data.db  logging.ipynb  sqllite.ipynb
src/5-OOPs and Multithreading/: advance_multi_processing.py  advance_multi_threading.py  factorial_multi_processing.py  multiprocessing_example.py  multithreading_example.py  oops.ipynb  web_scraping.py  web_scraping_advance_threading.py
src/7-Streamlit/: app.py  classification.py  sample_data.csv  widgets.py
(+50 files in other folders)
